--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -41,7 +41,7 @@ html[xmlns] .slides {display: block;}
 	position: relative;
 	zoom: 1;
 }
-.flex-viewport {max-height: 2000px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; transition: all 1s ease;}
+.flex-viewport {max-height: 550px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; transition: all 1s ease;}
 .loading .flex-viewport {max-height: 300px;}
 .flexslider .slides {zoom: 1;}
 
@@ -146,7 +146,7 @@ html[xmlns] .slides {display: block;}
 		border: 2px solid #fff;
 	}
 	.flex-control-paging li a.flex-active {
-		border: 2px solid #12A7CA;
+		border: 2px solid #fff;
 	}
 }
 @media screen and (max-width: 640px) {
