--- a/css/style.css
+++ b/css/style.css
@@ -707,7 +707,7 @@ a.navbar-brand span {
     left: 0;
 }
 .features {
-    padding: 5em 0;
+    padding: 0px;
 }
 .w3agile_tab_right.w3agile_tab_right2 {
     padding-left: 0;
@@ -716,7 +716,7 @@ a.navbar-brand span {
 /*-- Newsletter --*/
 .footer-top {
     background: #1a1a1a;
-    padding: 5em 0;
+    padding: 2em 0;
 }
 .footer-info p {
 	color: #B7B4B4;
@@ -775,16 +775,17 @@ a.navbar-brand span {
 }
 .footer-top h3 {
     color: #f99104;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
     font-size: 22px;
     text-transform: uppercase;
     font-weight: 600;
+    text-align: center;
 }
 .footer-top p {
     color: #999;
     font-size: 15px;
-    line-height: 28px;
-    margin-bottom: 20px;
+    line-height: 0px;
+    margin-bottom: 0px;
 }
 .wthree-footer-top ul li{
 	list-style-type: none;
@@ -2046,8 +2047,6 @@ h5.tittle{
 }
 @media screen and (max-width:767px) {
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
-    border-color: #e7e7e7;
-    background: #c69c6c;
 	margin-top: 23px;
 }
 .navbar-nav {
@@ -2168,15 +2167,17 @@ h5.tittle{
     margin-bottom: 20px;
 }
 .footer-top h3 {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 .wthree-footer-top {
     float: left;
-    width: 65%;
+    width: 100%;
+    margin-bottom: 20px
 }
 .w3ls-footer-top {
     float: left;
-    width: 35%;
+    width: 100%;
+    margin-bottom: 20px
 }
 .w3layouts-banner-bottom {
     padding: 0 0 1em;
